...
            "state" : "translated",
            "value" : "动作类型"
          }
        }
      }
    },
    "Exercises" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ejercicios"
          }
...
            "state" : "translated",
            "value" : "暂停"
          }
        }
      }
    },
    "Pause session" : {
      "comment" : "A button that pauses a session.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
...
